Regulating SAC & MiniSEED naming rules
