# app/v1/station/types.go
@@ -4,60 +4,67 @@ import "github.com/anyshake/observer/publisher"
 
 type Station struct{}
 
-type ADC struct {
+type adcModel struct {
 	Resolution int     `json:"resolution"`
 	FullScale  float64 `json:"fullscale"`
 }
 
-type Geophone struct {
+type geophoneModel struct {
 	EHZ float64 `json:"ehz"`
 	EHE float64 `json:"ehe"`
 	EHN float64 `json:"ehn"`
 }
 
-type Memory struct {
+type memoryModel struct {
 	Total   uint64  `json:"total"`
 	Free    uint64  `json:"free"`
 	Used    uint64  `json:"used"`
 	Percent float64 `json:"percent"`
 }
 
-type Disk struct {
+type diskModel struct {
 	Total   uint64  `json:"total"`
 	Free    uint64  `json:"free"`
 	Used    uint64  `json:"used"`
 	Percent float64 `json:"percent"`
 }
 
-type OS struct {
+type osModel struct {
 	OS       string `json:"os"`
 	Arch     string `json:"arch"`
 	Distro   string `json:"distro"`
 	Hostname string `json:"hostname"`
 }
 
-type CPU struct {
+type cpuModel struct {
 	Model   string  `json:"model"`
 	Percent float64 `json:"percent"`
 }
 
-type Location struct {
+type positionModel struct {
 	Latitude  float64 `json:"latitude"`
 	Longitude float64 `json:"longitude"`
 	Elevation float64 `json:"elevation"`
 }
 
+type stationModel struct {
+	UUID     string `json:"uuid"`
+	Name     string `json:"name"`
+	Station  string `json:"station"`
+	Network  string `json:"network"`
+	Location string `json:"location"`
+}
+
 type System struct {
-	UUID      string            `json:"uuid"`
-	Station   string            `json:"station"`
 	Timestamp int64             `json:"timestamp"`
 	Uptime    int64             `json:"uptime"`
-	Memory    Memory            `json:"memory"`
-	Disk      Disk              `json:"disk"`
-	ADC       ADC               `json:"adc"`
-	OS        OS                `json:"os"`
-	CPU       CPU               `json:"cpu"`
-	Geophone  Geophone          `json:"geophone"`
-	Location  Location          `json:"location"`
+	Station   stationModel      `json:"station"`
+	Memory    memoryModel       `json:"memory"`
+	Disk      diskModel         `json:"disk"`
+	ADC       adcModel          `json:"adc"`
+	OS        osModel           `json:"os"`
+	CPU       cpuModel          `json:"cpu"`
+	Geophone  geophoneModel     `json:"geophone"`
+	Location  positionModel     `json:"position"`
 	Status    *publisher.System `json:"status"`
 }
